--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ts-sync-request",
-  "version": "1.0.1",
-  "description": "TypeScript wrapper for sync-request library.",
+  "version": "1.1.0",
+  "description": "TypeScript strongly-typed wrapper for sync-request library.",
   "main": "dist/ts-sync-request.js",
   "types": "dist/ts-sync-request.d.ts",
   "license": "MIT",
