created fluent api syncrequestclient class. npm release 1.2.0 changes.

--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
   "name": "ts-sync-request",
-  "version": "1.1.1",
+  "version": "1.2.0",
   "description": "TypeScript strongly-typed wrapper for sync-request library.",
   "main": "dist/ts-sync-request.js",
   "types": "dist/ts-sync-request.d.ts",
   "license": "MIT",
   "homepage": "https://github.com/VeritasSoftware/ts-sync-request",
   "keywords": [
-    "typescipt",
+    "typescript",
     "wrapper",
     "sync",
+    "synchronous",
+    "http",
+    "call",
     "request",
     "library",
     "sync-request",
